--- a/css-template.html
+++ b/css-template.html
@@ -5,10 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        h1{
+            font-size: 25px;
+        }
+    </style>
 </head>
 <body>
-    <h1>please hover on circle</h1>
-
+    
+    <div class="cont">
+    <div class="container">
+        <h1 style="color: brown;"> wait </h1>
     <div class="ball"></div>
+</div>
+</div>
 </body>
 </html>
