--- a/css-template.html
+++ b/css-template.html
@@ -7,7 +7,8 @@
     <title>CSS</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        h1{
+        a{
+            z-index: 1;
             font-size: 25px;
         }
     </style>
@@ -16,8 +17,9 @@
     
     <div class="cont">
     <div class="container">
-        <h1 style="color: brown;"> wait </h1>
+        
     <div class="ball"></div>
+    <a  href="rotate.html" > go to ball page </h1>
 </div>
 </div>
 </body>
