--- a/rotate.html
+++ b/rotate.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <img src="ball.png" alt="ball" >
+    <img src="https://s6.uupload.ir/files/ball_2mbr.png" alt="ball" >
 </body>
 </html>
 
